--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "@fortawesome/fontawesome-svg-core": "^6.6.0",
         "@fortawesome/free-brands-svg-icons": "^6.6.0",
         "@fortawesome/vue-fontawesome": "^3.0.8",
+        "aos": "^2.3.4",
         "vue": "^3.4.21",
         "vue-meta": "^2.4.0",
         "vue-router": "^4.3.0"
