--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "@fortawesome/free-brands-svg-icons": "^6.6.0",
         "@fortawesome/vue-fontawesome": "^3.0.8",
         "aos": "^2.3.4",
+        "qrcode": "^1.5.4",
         "vue": "^3.4.21",
         "vue-meta": "^2.4.0",
         "vue-router": "^4.3.0"
