--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
         "format": "prettier --write src/"
     },
     "dependencies": {
+        "@fortawesome/fontawesome-free": "^6.7.1",
         "@fortawesome/fontawesome-svg-core": "^6.6.0",
         "@fortawesome/free-brands-svg-icons": "^6.6.0",
         "@fortawesome/vue-fontawesome": "^3.0.8",
+        "@nuxtjs/svg": "^0.4.1",
         "aos": "^2.3.4",
         "qrcode": "^1.5.4",
         "vue": "^3.4.21",
@@ -31,6 +33,8 @@
         "postcss": "^8.4.38",
         "prettier": "^3.2.5",
         "prettier-plugin-tailwindcss": "^0.5.14",
+        "sass": "^1.81.0",
+        "sass-loader": "^16.0.3",
         "tailwindcss": "^3.4.3",
         "vite": "^5.1.6",
         "vite-plugin-vue-devtools": "^7.0.18"
